--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ html {
 .bar3 {
   width: 35px;
   height: 5px;
-  background-color: #333;
+  background-color: white;
   margin: 6px 0;
   transition: 0.4s;
 }
